# boros

./: README.md  boros.cabal  fcc.cabal  hie.yaml
Examples/: BFComm.brs  Code.brs  Code.txt  Comm.fcc  Fac.brs  Factorial.brs  Fib.brs  Fibonacci.brs  Quine.brs  Split.brs  Test.fcc
Examples/BF/: BF-Fn.brs  BF-Simple.brs  BF.brs  BFSimple.brs  README.md
boros-vscode/syntaxes/: brs.tmLanguage.json
src/: Eval.hs  Intrinsics.hs  Main.hs  Parser.hs  Preprocess.hs  Syntax.hs  Utils.hs  Val.hs
src/Language/Boros/: Eval.hs  FFI.hs  Intrinsics.hs  Parser.hs  Preprocess.hs  Syntax.hs  Val.hs
